resolve validation failure during the validation of a binary data and some warnings